--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,8 @@ body{
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
 }
 
 .home-post-author{
@@ -34,11 +36,6 @@ body{
 .home-post-title {
     font-size: 1.2em;
     font-weight: bold;
-}
-
-.home-post-body {
-    margin-top: 10px;
-    margin-bottom: 15px;
 }
 
 .home-post-tags {
@@ -83,7 +80,7 @@ body{
 }
 
 .home-comment-field{
-    width: 50%;
+    width: 100%;
     height: 100px;
     text-align: left;
     text-wrap: normal;
@@ -113,6 +110,33 @@ body{
 .home-search-input:focus {
     outline: none;
     border-color: #1877f2;
+}
+
+.home-comment {
+    margin-top: 10px;
+}
+
+.home-comment div {
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.home-comment p {
+    margin: 0;
+}
+
+.home-comment a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.home-comment-content{
+    border: none!important;
 }
 
 /* Navbar */
@@ -470,8 +494,13 @@ body{
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
 }
-
+.user-profile-name{
+ font-weight: bold;
+    font-size: 30px;
+}
 .user-profile-h1 {
     text-align: center;
 }
@@ -485,7 +514,7 @@ body{
 }
 
 .user-profile-span {
-    color: red;
+    color: black;
 }
 
 .user-profile-img {
@@ -513,4 +542,21 @@ body{
 
 .user-profile-input[type="file"] {
     display: none;
+}
+
+.delete-post-button {
+    background-color: #ff3636;
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    width: 20%;
+    align-self: center;
+    margin-bottom: 10px;
+}
+
+.delete-post-button:hover {
+    background-color: #d63030;
 }
